# ibus-simple-table

./: .gitignore  Makefile.am  README.md  configure.ac  ibus-simple-table.spec.in
icons/: Makefile.am
m4/: Makefile.am
src/: Makefile.am  app.main.c  app.make  ca.go-nix.IBusSimpleTable.gschema.xml.in  config-file.c  config-file.h  config.txt  debug.c  debug.h  engine.c  engine.h  ibus-engine-simple-table.xml.in.in  main.c  trigger-string-hash.c  trigger-string-hash.h
